objects/maps__TPArea__c.object
<CustomObject>
    <fields>
        <fullName>maps__Config__c</fullName>
        <label>Config</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>maps__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>maps__TPArea__c</referenceTo>
        <relationshipLabel>Areas</relationshipLabel>
        <relationshipName>Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Territory Planning Area</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Planning Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>